--- a/css.css
+++ b/css.css
@@ -25,3 +25,10 @@
 .sidenav_container a:hover {
     color: #f1f1f1;
 }
+
+/*Header*/
+.header_container{
+    width: 300px;
+    padding: 8px 8px 8px 32px;
+    background-color: rgb(206, 49, 49);
+}
