--- a/css.css
+++ b/css.css
@@ -37,6 +37,24 @@
     box-shadow: 0px 10px 5px #00000060;
 }
 
+.user_name{
+    font-family: "Times New Roman", Times, serif;
+    font-style: normal;
+    font-size: 20px;
+    color: white;
+    position: absolute;
+    left:5px;
+  }
+
+.date_time{
+    font-family: "Times New Roman", Times, serif;
+    font-style: normal;
+    font-size: 15px;
+    color: white;
+    position: absolute;
+    right:180px;
+    top:10px;
+}
 /* Background for the Login Form */
 .form {
     position: relative;
