--- a/css.css
+++ b/css.css
@@ -26,6 +26,29 @@
     color: #f1f1f1;
 }
 
+.nav_items{
+  background-color: rgb(0, 0, 0);
+}
+
+.nav_items :hover{
+  background-color: rgba(59, 59, 59, 0.521);
+}
+
+.logout_button{
+  background-image:url("Images/logout_button.jpg");
+  background-size:100%;
+  width: 140px;
+  position: relative;
+  top:210px;
+  left: 70px;
+  border-radius: 5px;
+}
+
+.logout_button a{
+  color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 /*Header*/
 .header_container{
     width: 90%;
@@ -54,10 +77,6 @@
     position: absolute;
     right:180px;
     top:10px;
-}
-
-.nav_items{
-  background-color: rgb(159, 159, 170);
 }
 
 /* Background for the Login Form */
@@ -126,4 +145,8 @@
     -webkit-transition: all 0.3 ease;
     transition: all 0.3 ease;
     cursor: pointer;
+  }
+
+  .main{
+    margin-left: 300px;
   }
