Personal Information Page

--- a/css.css
+++ b/css.css
@@ -178,3 +178,10 @@
     position: relative;
     left:300px;
   }
+
+  .personal_info{
+    width:500px;
+    position: relative; 
+    left:300px;
+    top: 20px;
+  }
