made some changes in add courses, faculty and student

--- a/css.css
+++ b/css.css
@@ -304,3 +304,10 @@
     left:300px;
     top: 20px;
   }
+
+  .add_faculty{
+    width:500px;
+    position: relative; 
+    left:300px;
+    top: 20px;
+  }
