--- a/css.css
+++ b/css.css
@@ -311,3 +311,11 @@
     left:300px;
     top: 20px;
   }
+
+
+  .search_details{
+    width:500px;
+    position: relative; 
+    left:300px;
+    top: 20px;
+  }
